--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -1,3 +1,95 @@
-// Place all the styles related to the reviews controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.review-wrapper{
+  margin-top: 50px;
+  background: #e0e0e0;
+  padding-top: 50px;
+  height: 100vh;
+  &__forms{
+    width: 600px;
+    background: white;
+    margin: 0 auto;
+    padding: 20px;
+    &--title{
+      font-size: 20px;
+      border-bottom: 1px solid #e0e0e0;
+      padding-bottom: 10px;
+    }
+    &--user{
+      margin-top: 20px;
+      &--image{
+        float: left;
+      }
+      &--name{
+        float: left;
+        font-size: 40px;
+        margin-left: 50px;
+        line-height: 100px;
+      }
+    }
+    &--rate{
+      padding-top: 20px;
+
+    }
+    &--review{
+      padding-top: 20px;
+    }
+    &--submit{
+      margin: 0 auto;
+      padding-top: 50px;
+      width: 150px;
+    }
+  }
+}
+
+.userReview-wrapper{
+  background: #e0e0e0;
+  padding: 50px 50px;
+  &__averageRates{
+    &--title{
+      font-size: 20px;
+      color: gray;
+      border-bottom: 3px solid gray;
+      width: 250px;
+      text-align: center;
+    }
+    &--rate{
+      font-size: 40px;
+      color: red;
+      width: 100px;
+      text-align: center;
+      padding-top: 10px;
+    }
+  }
+  &__reviews{
+    margin-top: 20px;
+    &--title{
+      font-size: 20px;
+      color: gray;
+      border-bottom: 3px solid gray;
+      width: 250px;
+      text-align: center;
+    }
+    &--contents{
+      margin-top: 20px;
+      &--reviewerName{
+        float: left;
+        font-size: 20px;
+        margin-right: 20px;
+      }
+      &--rate{
+        float: left;
+        font-size: 20px;
+        color: orange;
+      }
+      &--reviewText{
+        padding: 20px 20px;
+        color: gray;
+        border-bottom :1px solid gray;
+        width: 500px;
+      }
+    }
+  }
+}
+
+.textArea{
+  width: 100%;
+}
