--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -59,7 +59,7 @@
         .projectCreate-wrapper__bottom--detail.clearfix
           .projectCreate-wrapper__bottom--detail--left
             .projectCreate-wrapper__bottom--detail--left--text.clearfix
-              = f.text_area :introduction, class: "form", placeholder: "(例)年末にインドに行きたいと考えています。"
+              = f.text_area :detail, class: "form", placeholder: "(例)年末にインドに行きたいと考えています。"
           -# .projectCreate-wrapper__bottom--detail--right.clearfix
           -#   旅への思い
 
