--- a/app/assets/stylesheets/_project-wrapper.scss
+++ b/app/assets/stylesheets/_project-wrapper.scss
@@ -1,5 +1,6 @@
 .project-wrapper{
   width: 100%;
+  height: 700px;
   margin: 0 auto;
   padding: 100px 0 100px 0;
   background: #e0e0e0;
@@ -12,6 +13,7 @@
     width: 75%;
     margin: 0 auto;
     padding-top: 50px;
+    margin-bottom: 50px;
     &--content{
       width: 300px;
       height: 300px;
@@ -62,7 +64,6 @@
     }
   }
   .moreProjects{
-    margin-top: 50px;
     text-align: center;
     width: 150px;
     height: 30px;
