--- a/app/views/projects/_afterSignIn.html.haml
+++ b/app/views/projects/_afterSignIn.html.haml
@@ -116,6 +116,8 @@
             = link_to project.title, project_path(project.id)
           .project-wrapper__projects--content--details--date.clearfix
             = project.departure_date.strftime("%Y年%m月")
+    .pagenation.clearfix
+      = paginate(@projects)
 
 
 -# マイリストモーダル
