--- a/app/assets/stylesheets/_projectShow.scss
+++ b/app/assets/stylesheets/_projectShow.scss
@@ -1,20 +1,20 @@
 .project-show-wrapper{
-  padding: 100px 200px;
-  background: #e0e0e0;
+  padding: 50px 200px;
+  background: black;
   height: 1500px;
-  &__title{
+  &__top{
     color: gray;
     font-size: 36px;
     &--left{
       margin-top: 30px;
       padding-top: 40px;
       margin-bottom: 10px;
-      font-size: 20px;
+      font-size: 30px;
       float: left;
     }
     &--right{
       float: right;
-      margin-top: 10px;
+      margin-top: 80px;
       .link{
         font-size: 20px;
         text-decoration: none;
@@ -36,6 +36,7 @@
         &--image{
         width: 100%;
         height: 500px;
+        border: 1px solid black;
       }
       &--userInfo{
         width: 580px;
