--- a/app/assets/stylesheets/_afterSignIn.scss
+++ b/app/assets/stylesheets/_afterSignIn.scss
@@ -7,10 +7,18 @@
     top: 0;
     right: 0;
     left: 0;
-    background: #FFFFDD;
+    background: black;
+    color: white;
     z-index: 10;
     &--left{
       float: left;
+      .link{
+        color: white;
+        &:hover{
+          color: gray;
+          cursor: pointer;
+        }
+      }
     }
     &--right{
       position: relative;
@@ -28,7 +36,7 @@
         }
         .link{
           text-decoration: none;
-          color: black;
+          color: white;
           &:hover{
             color: gray;
             cursor: pointer;
@@ -133,8 +141,9 @@
   height: 80px;
   padding: 10px 20px;
   position: fixed;
-  background: white;
+  background: black;
   .link{
+    color: white;
     &:hover{
       color: gray;
     }
@@ -151,9 +160,9 @@
   right: 200px;
   overflow: scroll;
   position: fixed;
-  background: white;
+  background: black;
+  color: white;
   &--head{
-    color: gray;
     margin-bottom: 10px;
   }
   &--contents{
@@ -167,7 +176,7 @@
       margin-left: 10px;
       .link{
         text-decoration: none;
-        color: gray;
+        color: white;
         font-size: 14px;
       }
     }
