--- a/app/assets/stylesheets/_userShow.scss
+++ b/app/assets/stylesheets/_userShow.scss
@@ -1,6 +1,7 @@
 .main-wrapper{
-  background: #e0e0e0;
+  background: black;
   height:700px;
+  padding-bottom: 100px;
   &--profile{
     padding-top: 100px;
     width: 900px;
