--- a/app/assets/stylesheets/participants.scss
+++ b/app/assets/stylesheets/participants.scss
@@ -1,7 +1,7 @@
 .participant-wrapper{
-  background: #e0e0e0;
+  background: black;
   padding-top: 100px;
-  height: 1000px;
+  height: 800px;
   &__title{
     width: 1200px;
     height: 100px;
@@ -62,4 +62,6 @@
   border: none;
   color: white;
   margin: 0 auto;
+  margin-left: 220px;
+  margin-bottom: 30px;
 }
