--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -1,6 +1,5 @@
 .review-wrapper{
   margin-top: 50px;
-  background: #e0e0e0;
   padding-top: 50px;
   height: 100vh;
   &__forms{
@@ -41,13 +40,13 @@
 }
 
 .userReview-wrapper{
-  background: #e0e0e0;
+  background: black;
   padding: 50px 50px;
   &__averageRates{
     &--title{
       font-size: 20px;
-      color: gray;
-      border-bottom: 3px solid gray;
+      color: white;
+      border-bottom: 3px solid white;
       width: 250px;
       text-align: center;
     }
@@ -63,8 +62,8 @@
     margin-top: 20px;
     &--title{
       font-size: 20px;
-      color: gray;
-      border-bottom: 3px solid gray;
+      color: white;
+      border-bottom: 3px solid white;
       width: 250px;
       text-align: center;
     }
@@ -74,6 +73,7 @@
         float: left;
         font-size: 20px;
         margin-right: 20px;
+        color: white;
       }
       &--rate{
         float: left;
@@ -82,8 +82,8 @@
       }
       &--reviewText{
         padding: 20px 20px;
-        color: gray;
-        border-bottom :1px solid gray;
+        color: white;
+        border-bottom :1px solid white;
         width: 500px;
       }
     }
