Create search action

--- a/app/assets/stylesheets/_afterSignIn.scss
+++ b/app/assets/stylesheets/_afterSignIn.scss
@@ -12,6 +12,10 @@
     z-index: 10;
     &--left{
       float: left;
+      li{
+        float: left;
+        margin-right: 100px;
+      }
       .link{
         color: white;
         &:hover{
