--- a/app/views/projects/_topWrapper.html.haml
+++ b/app/views/projects/_topWrapper.html.haml
@@ -1,7 +1,13 @@
 .top-wrapper
   .top-wrapper__upper
     .top-wrapper__upper--left
-      = link_to "trippiece", root_path, class: "link"
+      %ul
+        %li
+          = link_to "trippiece", root_path, class: "link"
+        %li
+          = form_tag(search_projects_path) do
+            = text_field_tag :search
+            = submit_tag '旅の検索'
     .top-wrapper__upper--right
       %ul
         %li#mylist
