Create slide event

--- a/app/views/projects/_afterSignIn.html.haml
+++ b/app/views/projects/_afterSignIn.html.haml
@@ -1,6 +1,6 @@
 = render "topWrapper"
 
-%ul.top-wrapper__middle
+%ul.top-wrapper__middle.slider
   %li.top-wrapper__middle--slide.active
     = image_tag "IMG_0276.jpg", class: "backimage"
     .top-wrapper__middle--slide--title
@@ -30,19 +30,6 @@
     .top-wrapper__middle--slide--title
       .top-wrapper__middle--slide--title--main
         東アジア特集
-      .top-wrapper__middle--slide--title--sub
-        最高の海外旅行体験を、 trippieceで
-    .top-wrapper__middle--slide--changeBtns
-      .top-wrapper__middle--slide--changeBtns--changeBtn.prev
-        %i.fa.fa-arrow-left
-      .top-wrapper__middle--slide--changeBtns--changeBtn.next
-        %i.fa.fa-arrow-right
-
-  %li.top-wrapper__middle--slide
-    = image_tag "IMG_1692.jpg", class: "backimage"
-    .top-wrapper__middle--slide--title
-      .top-wrapper__middle--slide--title--main
-        南アジア特集
       .top-wrapper__middle--slide--title--sub
         最高の海外旅行体験を、 trippieceで
     .top-wrapper__middle--slide--changeBtns
