--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -21,7 +21,7 @@
         .signupLinks__buttons--upper
           .signupLinks__buttons--upper--facebook.btn
             %i.fa.fa-facebook-official
-            = link_to 'Facebookでログイン', user_facebook_omniauth_authorize_path
+            = link_to "Facebookでログイン", user_facebook_omniauth_authorize_path, class:"btn"
           .signupLinks__buttons--upper--email
             = link_to "メールアドレスで新規登録", new_user_registration_path, class:"btn"
         .signupLinks__buttons--middle
@@ -66,7 +66,7 @@
         .signupLinks__buttons--upper
           .signupLinks__buttons--upper--facebook.btn
             %i.fa.fa-facebook-official
-            Facebookで新規登録/ログイン
+            = link_to "Facebookでログイン", user_facebook_omniauth_authorize_path, class:"btn"
           .signupLinks__buttons--upper--email
             = link_to "メールアドレスで新規登録", new_user_registration_path, class:"btn"
         .signupLinks__buttons--middle
